# yawc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.cpp  config.hpp  debug.sh  decoration.hpp  keybinds.cpp  layer.hpp  lock.hpp  main.cpp  meson.build  scene_descriptor.cpp  scene_descriptor.hpp  server.cpp  server.hpp  toplevel.cpp  toplevel.hpp  utils.cpp  utils.hpp  window_ops.cpp  window_ops.hpp  wm.cpp  wm_api.cpp  wm_api.h  wm_defs.cpp  wm_defs.hpp
.cache/clangd/index/: config.cpp.45A3BE332999BC91.idx  config.hpp.3F9DC1B16E6254E2.idx  cursor.cpp.BD032E1D9BD427B1.idx  cursor_constraint.cpp.13AC3590FD3AE232.idx  decoration.cpp.A66E667479071F53.idx  decoration.hpp.3CAD3CA67F500FF5.idx  drag.cpp.CF4976D91F4F80ED.idx  hyprland-global-shortcuts-v1.c.C7AD7C3301A1ACC1.idx  hyprland-global-shortcuts-v1.h.68F70577025E7630.idx  idle.cpp.96E76677C8112EB3.idx  keybinds.cpp.9BD1ABDD29A55207.idx  keyboard.cpp.9860614A9EA163F3.idx  layer.hpp.3B5531EC549FA38E.idx  layer_shell.cpp.49AE276E9FD04473.idx  lock.cpp.BC9C21A991B67F65.idx  lock.hpp.6C2CA1326EDB9693.idx  main.c.A24E3F8B94BFC777.idx  main.cpp.62049183EE73FBAE.idx  nuklear.h.BE30E7F9631802FC.idx  nuklear_wm_gl.c.7AE8842185E5D576.idx  nuklear_wm_gl2.h.ED5FEAEA9E832DE1.idx  output.cpp.66EAD28C5703CD77.idx  pixel_format.cpp.EA2C63302F42A68F.idx  pixel_format.hpp.7E417BD2012D3964.idx  scene_descriptor.cpp.AEBA4009E324EE61.idx  scene_descriptor.hpp.7E0FDEC6872C7572.idx  screenshare.cpp.34ECF00A7317709E.idx  seat.cpp.4D4B7AE1DC3BB934.idx  server.cpp.16BE6F759F98C926.idx  server.hpp.A9EA89F9AB8807E9.idx  shm.cpp.22824F0050B70B2B.idx  shm.hpp.9B72A1352411E557.idx  shortcut.cpp.094CCFC5694DA437.idx  toplevel.cpp.18EE7A1667AB13A7.idx  toplevel.hpp.2E520FDF52C992A3.idx  utils.cpp.46FBFC5754E4F285.idx  utils.hpp.B4ED76A2B58A972F.idx  window_ops.cpp.CFA50DE29E05E785.idx  window_ops.hpp.6302A51E43FFFB8B.idx  wm.cpp.63432E37C2BF26C3.idx  (+6 more)
default-wm/: main.c  meson.build  nuklear.h  nuklear_wm_gl.c  nuklear_wm_gl2.h
default-wm/.cache/clangd/index/: main.c.C02BD96F02C37DE8.idx
extra/: hyprland-global-shortcuts-v1.c  hyprland-global-shortcuts-v1.h
handlers/: cursor.cpp  cursor_constraint.cpp  decoration.cpp  drag.cpp  idle.cpp  keyboard.cpp  layer_shell.cpp  lock.cpp  output.cpp  screenshare.cpp  seat.cpp  shortcut.cpp  xdg_shell.cpp  xwayland.cpp
old/: README.md  old_toplevel.cpp  old_window_ops.cpp  old_xwayland.cpp  old_xwayland_unmanaged.cpp
protocols/: meson.build
shm_alloc/: pixel_format.cpp  pixel_format.hpp  shm.cpp  shm.hpp
subprojects/: wlroots.wrap  xwayland-satellite.wrap
subprojects/packagefiles/xwayland_satellite/: meson.build
tools/: yawc-default-wm  yawc-reload  yawc-shortcuts  yawc.toml
